--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -81,7 +81,7 @@ Enhancer-associated lincRNAs (elincRNAs) in human lymphoblastoid cell lines (LCL
 
 \subsection*{elincRNAs show similar expression profiles as other lincRNAs}
 
-Most enhancer-associated noncoding RNAs (eRNAs) are often transcribed bidirectionally and then rapidly degraded by the nuclear exosome, which makes them hard to detect due to their low expression levels \cite{Darrow2013} \cite{Lam2014}⁠. In contrast, elincRNAs are more stably and preferentially transcribed in a single direction, and are often spliced and polyadenylated \cite{Marques2013a}⁠. 
+Most enhancer-associated noncoding RNAs (eRNAs) are transcribed bidirectionally and then rapidly degraded by the nuclear exosome, which makes them hard to detect due to their low expression levels \cite{Darrow2013} \cite{Lam2014}⁠. In contrast, elincRNAs are more stably and preferentially transcribed in a single direction, and are often spliced and polyadenylated \cite{Marques2013a}⁠. 
 First, to investigate if LCL-expressed elincRNAs share similar expression profiles relative to other expressed genes as the lowly expressed eRNAs, I compared  their expression levels to that of other lincRNAs and protein-coding genes (Figure \ref{charac_elinc}A). I found that elincRNAs are expressed at no more lower levels compared to other lincRNAs in human LCLs (GM12878, two-tailed Mann-Whitney U test, $p=0.258$). In addition, contrary to the highly tissue specific eRNAs \cite{Wu2014}, elincRNAs are no differently tissue-specific from other lincRNAs either, although their median tissue specificity index ($\tau$) is slightly higher (two-tailed Mann-Whitney U test, $p=0.38$, Figure \ref{charac_elinc}B). These results suggest that elincRNAs may have distinct properties relative to other enhancer-associated transcripts.
 
 \subsection*{elincRNA transcripts are less conserved than other lincRNAs}
@@ -90,7 +90,7 @@ To gain insights into the molecular evolution of elincRNAs, I investigated the n
 
 Interestingly, a recent study of a set of trait-relevant and enhancer-associated lincRNAs showed that although exons of these lincRNAs did not seem to have evolved under purifying selection relative to other LCL-expressed lincRNAs across mammalian and primate evolution, their sequences are constraint specifically during recent human evolution (Tan et al, 2016, under revision). Therefore, although my result may suggest that elincRNA transcripts were not evolving under constraint across broad mammalian evolution, their conservation across modern human evolution remains to be investigated.
 
-\subsection*{elincRNAs promoter regions co-localize with loop anchors and cohesin binding sites}
+\subsection*{elincRNA promoter regions co-localize with loop anchors and cohesin binding sites}
 
 Next, to examine whether elincRNAs are associated with the regulation of chromosomal architecture, I investigated their co-localization with loop anchors, where enhancer-promoter gene regulatory interactions are frequent \cite{Ji2016}. These regulatory regions are essential to establish chromosomal interactions within topologically associating domains (TADs). I compared the overlap of elincRNAs with these regions relative to what would be expected if these loci were randomly distributed across the intergenic regions of the genome (Methods). I found that elincRNAs are significantly enriched at LCL loop anchors (fold enrichment = 2.79, $q=1e-04$, Figure \ref{enrich_elinc}A).
 
@@ -101,14 +101,14 @@ I found that elincRNA promoter regions are significantly enriched in CTCF and co
 
 As a large proportion of binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}C) and since loops mediated by CTCF and cohesin collectively are thought to have different roles in chromosomal organization from those mediated only by cohesin \cite{Ji2016}⁠, I further determined the independent enrichment of elincRNAs in CTCF and cohesin binding, using mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to that of CTCF (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
 
-\subsection*{elincRNAs promoter regions are not enriched at TAD boundaries}
+\subsection*{elincRNA promoter regions are not enriched at TAD boundaries}
 
 As loop anchors are frequently found at TAD boundaries, I next investigated whether similar enrichment would be observed for elincRNAs at TAD boundaries. Using Hi-C data (Figure \ref{TAD_loop_def}) I defined TAD boundaries as regions extending inside TADs from the borders until reaching local intra-TAD contacts that exceeds a cut-off threshold (see Methods for details). Although elincRNAs promoter regions are enriched at loop anchors relative to other LCL-expressed lincRNAs, no significant enrichment was found for these loci  at TAD boundaries (fold enrichment = 1.2, $q=0.08$, Figure \ref{enrich_boundaries}A). Despite the absence of significant elincRNA enrichment at TAD boundaries, dividing TADs into 10 equally sized bins reveals that elincRNAs tend to be more frequently found near the end of the TADs and are depleted in the center of the TADs (bin 5, fold enrichment = 0.37, $q=0.06$) relative to other LCL-expressed lincRNAs (Figure \ref{enrich_boundaries}B). The trend is consistent with their enrichment at loop anchors, which are enriched at TAD boundaries (fold enrichment =1.74 , $q<1e-3$, not shown).
 
 This lack of significant enrichment of elincRNAs at TAD boundaries may be a consequence of poor resolution of the current Hi-C technology, which is restrained to a maximum of 5kb \cite{Rao2014}⁠, as well as limitations in the method used to define boundary regions. Particularly, I defined TAD boundaries by only extending inwards from TAD borders (see methods for details), therefore all genes located outside of defined TADs but close to a TAD border would be unaccounted for in the analysis. 
 
 
-\subsection*{elincRNAs are associated with high DNA:DNA contacts within TADs}
+\subsection*{elincRNA are associated with high DNA:DNA contacts within TADs}
 
 To further support their role in regulating promoter-enhancer contacts, I investigated whether elincRNAs are associated with regions with higher DNA:DNA interactions. To this end, I measured the average amount of contact within their respective TADs (Figure \ref{TAD_TAD_contacts}A, methods). I found that elincRNAs are frequently embedded within TADs with a higher mean density of contacts compared to other lincRNAs in GM12878 (Median fold difference=1.24, two-tailed Mann-Whitney U test, $p<1e-04$, Figure \ref{TAD_TAD_contacts}B). In addition, the fold difference in the amount of DNA contacts within TADs that harbour these elincRNA loci relative to other LCL-expressed lincRNAs were less pronounced in 3 other cell lines (Median fold difference=1.05, 1.07, and 1.04, p=$0.02, 0.04, 0.472$ in HUVEC, K562 and NHEK, respectively). This suggests that the association between elincRNA expression and chromosomal contacts is likely cell line-dependent. 
 Although my findings do not provide insights into the molecular mechanisms through which elincRNAs may regulate chromosomal architecture, their associated high DNA:DNA contacts, together with their enrichment for cohesin binding suggest a role for elincRNAs in the modulation of enhancer-promoter looping within topologically associating domains.
@@ -125,7 +125,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=0.9\textwidth]{Figures/2_enrich_anchor_prot.pdf}
-	\caption{elincRNAs are enriched at loop anchors and cohesin binding sites. Fold enrichment relative to random expectation: \textbf{A.} elincRNA (orange) and other lincRNAs (blue) promoter regions at loop anchors. \textbf{B.} elincRNA and other lincRNAs promoter regions at TAD boundaries. \textbf{C.} all cohesin and CTCF peaks in human LCLs at elincRNA and other lincRNAs promoter regions. \textbf{D.} cohesin- and CTCF-only peaks at elincRNA and other lincRNAs promoter regions.\textbf{E.} Proportions of overlap between cohesin (RAD21 and SMC3) and CTCF peaks in human LCLs. \textbf{F.} Enrichment of elincRNA and other lincRNA promoter regions across TADs. Each bar represents a bin of 10\% TAD length. The log10 of q-values are put in color codes to give an estimation of the confidence in each value. q represents the p-value adjusted for multiple testing using FDR.}
+	\caption{elincRNAs are enriched at loop anchors and cohesin binding sites. Fold enrichment relative to random expectation: \textbf{A.} elincRNA (orange) and other lincRNA (blue) promoter regions at loop anchors. \textbf{B.} all cohesin and CTCF peaks in human LCLs at elincRNA and other lincRNA promoter regions. \textbf{C.} Proportions of overlap between cohesin (RAD21 and SMC3) and CTCF peaks in human LCLs. \textbf{D.} cohesin- and CTCF-only peaks at elincRNA and other lincRNAs promoter regions.}
 	\label{enrich_elinc}
 \end{figure}
 
@@ -160,7 +160,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/6_interactions.pdf}
-	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} Schematic representation of the algorithm used to measure insulation. A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal, representing a step-size of 5kb in the genome, given by the matrix resolution. For each position $d$, the sum of all pixels in the blue diamond ($V_d$) is computed and later used to define boundaries. The sum in the diamond at position $d$ (red vertical dotted line) represents a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of w (blue curves at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum of interactions across position d (i.e. the sum in the diamond at position $d$, stored as the $d^{th}$ value of vector $V$), while $d$ are the positions along the matrix diagonal (corresponding to 5kb segments of the genome). Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
+	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal, representing a step-size of 5kb in the genome, given by the matrix resolution. For each position $d$, the sum of all pixels in the blue diamond ($V_d$) is computed and later used to define boundaries. The sum in the diamond at position $d$ (red vertical dotted line) represents a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of w (blue curves at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum of interactions across position d (i.e. the sum in the diamond at position $d$, stored as the $d^{th}$ value of vector $V$), while $d$ are the positions along the matrix diagonal (corresponding to 5kb segments of the genome). Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
 	\label{interact_hic}
 \end{figure}
 
@@ -172,7 +172,7 @@ Although it has been long recognized that chromosomal conformation has strong im
 
 LincRNAs originating from enhancers (elincRNAs) have been shown to modulate chromosomal architecture \cite{Yin2015}⁠ and are frequently located within topologically associated domains (TADs) associated with high levels of genomic interactions (Tan et al, 2016, under revision). Here, I used publicly available genomics data to investigate the prevalence of elincRNA regulation in modulating chromosomal architecture. Together with strong enrichment in cohesin binding at elincRNAs promoter regions, their frequent localization at loop anchors and high amount of intra-TAD contacts associated with elincRNAs support their putative role in regulating enhancer-promoter loops. 
 
-There is ongoing debate on the biological relevance of elincRNA transcription in particular with regards to  whether their associated regulatory roles are transcript- or transcription-dependent. Notably, the association between elincRNAs and chromosomal organization does not constitute a proof for their role in promoting contact, as it might be a consequence of the presence of active enhancers at their promoter region, rather than the elincRNA transcript itself. With this in mind and to address this key question, it would be important to perform an analysis similar to that presented here but where enhancers producing elincRNAs are compared to other active enhancers, that generally produce unstable bidirectionally-transcribed eRNAs. Ultimately, the dissection of the molecular mechanisms underlying these enhancer-associated regulation of chromosomal conformation will require genetic manipulation of elincRNA candidate transcript abundance, for example by using RNAi and inhibiting their transcription with CRISPR-Cas9 \cite{Li2013}⁠.
+There is ongoing debate on the biological relevance of elincRNA transcription in particular with regards to  whether their associated regulatory roles are transcript- or transcription-dependent. Notably, the association between elincRNAs and chromosomal organization does not constitute a proof for their role in promoting contact, as it might be a consequence of the presence of active enhancers at their promoter region, rather than the elincRNA itself. With this in mind and to address this key question, it would be important to perform an analysis similar to that presented here but where enhancers producing elincRNAs are compared to other active enhancers, that generally produce unstable bidirectionally-transcribed eRNAs. Ultimately, the dissection of the molecular mechanisms underlying enhancer-associated regulation of chromosomal conformation will require genetic manipulation of elincRNA candidate transcript abundance, for example by using RNAi and inhibiting their transcription with CRISPR-Cas9 \cite{Li2013}⁠.
 
 Furthermore, extending the analysis from within-topological domain interactions to between-TAD contacts \cite{Fraser2015}⁠, to inter-chromosomal contacts, and eventually to DNA associations with the nuclear lamina would provide a more complete overview of elincRNA-dependent chromosomal interactions that shape the nuclear architecture. These analyses could also be extended to additional cell-lines to reveal if the effect of elincRNAs in nuclear architecture is cell-line specific, or more generalized. 
 
@@ -183,7 +183,7 @@ Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cit
 
 \subsection*{elincRNA definition}
 
-LincRNAs and protein-coding genes sets were provided by Jennifer Tan (Tan et al, 2016, under revision). Generally, those sets were obtained by combining ENSEMBL annotations for the human genome (build 70) with a set of lincRNAs annotated \textit{de novo} using LCL transcriptome data obtained from the ENCODE consortium \cite{ENCODEProject2012}. The list of genes used in all analyses corresponds to genes expressed in the GM12878 human lymphoblastoid cell line. LincRNAs were classified based on overlap between their putative promoter region, defined as the 1kb region upstream from the transcription start site and predicted regulatory elements available on ENCODE \cite{ENCODEProject2012}⁠. These regulatory elements are predicted computationally from histone marks by a hidden Markov-model. Predicted active promoters and all enhancers were considered. The 2 categories of lincRNAs that are used throughout this report are elincRNAs, defined as overlapping enhancers marks but no promoters marks in their putative promoter region (Figure \ref{Genome_browser}A), and other lincRNAs defined as overlapping neither enhancer nor promoters marks in their promoter region (Figure \ref{Genome_browser}B).
+LincRNAs and protein-coding genes sets were provided by Jennifer Tan (Tan et al, 2016, under revision). Generally, those sets were obtained by combining ENSEMBL annotations for the human genome (build 70) with a set of lincRNAs annotated \textit{de novo} using LCL transcriptome data obtained from the ENCODE consortium \cite{ENCODEProject2012}. The list of genes used in all analyses corresponds to genes expressed in the GM12878 human lymphoblastoid cell line. LincRNAs were classified based on overlap between their putative promoter region, defined as the 1kb region upstream from the transcription start site and predicted regulatory elements available on ENCODE \cite{ENCODEProject2012}⁠. These regulatory elements are predicted computationally from histone marks by a hidden Markov-model. Predicted active promoters and all enhancers were considered. The 2 categories of lincRNAs that are used throughout this report are elincRNAs, defined as overlapping predicted enhancers but no predicted active promoters in their putative promoter region (i.e. high H3K4Me1/H3K4Me3 ratio, Figure \ref{Genome_browser}A), and other lincRNAs defined as overlapping neither enhancers nor active promoters in their promoter region (i.e. low H3K4Me1 and H3K4Me3 marks, Figure \ref{Genome_browser}B).
 
 \subsection*{Expression levels}
 
@@ -191,11 +191,11 @@ Processed median expression data for elincRNAs and protein-coding genes in 4  di
 
 \subsection*{Conservation and tissue specificity}
 
-The sequence conservation was previously calculated in exons (Tan et al, 2016, under revision) through mammalian and primate evolution using phastCons scores \cite{Siepel2005}⁠ and averaged phastCons score were used as a measure of exonic sequence conservation. Tissue specificity index ($\tau$) was computed following the described procedure in \cite{Kryuchkova2015a}, considering only genes with expression above a cutoff of 0.1 RPKM.
+The sequence conservation was previously calculated in exons (Tan et al, 2016, under revision) through mammalian and primate evolution using phastCons scores \cite{Siepel2005}⁠ and averaged phastCons score were used as a measure of exonic sequence conservation. Tissue specificity index ($\tau$) was computed following the procedure described in \cite{Kryuchkova2015a}, considering only genes with expression above a cutoff of 0.1 RPKM.
 
 \subsection*{Chip-seq data}
 
-Chip-seq peaks for CTCF, RAD21 and SMC3 in GM12878 were retrieved from the ENCODE website \cite{ENCODEProject2012}⁠. Cohesin peaks were defined as the union between the peaks of RAD21 and SMC3 subunits. The CTCF and cohesin exclusive peaks were obtained by using the intersect and subtract tools from the bedtools suite, removing all peaks that are common to CTCF and cohesin.
+Chip-seq peaks for CTCF, RAD21 and SMC3 in GM12878 were obtained from the ENCODE consortium \cite{ENCODEProject2012}⁠. Cohesin peaks were defined as the union between the peaks of RAD21 and SMC3 subunits. The CTCF and cohesin exclusive peaks were obtained by using the intersect and subtract tools from the bedtools suite, removing all peaks that are common to CTCF and cohesin.
 
 \subsection*{Enrichment of genetic elements}
 
@@ -210,32 +210,32 @@ The list of TADs used in the computations was obtained from \cite{Rao2014}. They
 \subsection*{Hi-C data and normalization}
 
 Contacts were calculated using Hi-C contact matrices from \cite{Rao2014}. All computations are performed on 5kb resolution matrices constructed from all read pairs mapping to the genome with a MAPQ score of at least 30. To correct for bias induced by chromatin accessibility and restriction sites density \cite{Rao2014}, matrices were normalized using the KR normalization vector provided by the authors whenever possible. SQRTVC (square root vanilla coverage) was used for chromosome 9 of all cell lines, because the KR algorithm did not converge for chromosome 9 of K562 probably as a result of the high sparsity of the matrix. I chose SQRTVC as a substition for KR as the authors reported this method  to yield very close results to KR. 
-The normalization procedure, as described by the authors, consists in dividing each entry in the raw contact matrix M by a corresponding value in the normalization vector N:
+The normalization procedure, as described by the authors, consists in dividing each entry in the raw contact matrix M by corresponding values in the normalization vector N:
 
 \vspace{0.2in}
 $M^*_{i,j}=\frac{M_{i,j}}{N_{KR}[\frac{i}{res}]*N_{KR}[\frac{j}{res}]}$
 \vspace{0.2in}
 
-\noindent Where $M_{i,j}$ is an entry from the raw matrix and $M^*_{i,j}$ corresponding normalized entry.
+\noindent Where $M_{i,j}$ is an entry from the raw matrix and $M^*_{i,j}$ corresponding normalized entry and $res$ is the resolution of the contact matrix (i.e. 5000, in this study).
 
 \subsection*{TAD boundaries definition}
 
-Boundaries are extended from TAD borders towards the interior of TADs using a custom algorithm. The method used to define boundaries relies on the assumption that boundaries are insulated regions. In other words, there are few interactions between elements located before and those after the boundaries. The insulation is measured by sliding a diamond (Figure \ref{interact_hic}A) on every position along the matrix diagonal and computing the sum in the diamond at each position. Lower values represent more insulated regions. The size of the diamond has been set to an arbitrary threshold of 100kb, considered reasonable as the median length of filtered TADs is 140kb. 
+Boundaries are extended from TAD borders towards the interior of TADs using a custom algorithm. The method used to define boundaries relies on the assumption that there are few interactions between elements located before and those after the boundaries. These interactions are measured by sliding a diamond (Figure \ref{interact_hic}A) on every position along the matrix diagonal and computing the sum in the diamond at each position. Boundaries should present lower values. The size of the diamond has been set to an arbitrary threshold of 100kb, considered reasonable as the median length of filtered TADs is 140kb. 
 The algorithm can be described as sliding a diamond of width $w$  along the diagonal of a square matrix $M$ of $n$ dimensions on all positions $d$ between $1+w$ and $n-w$. Those latter limits are set to prevent the diamond from getting out of the matrix. At each position, the sum of all values in the diamond is stored in a vector $V$. This can be rewritten as: 
 
 \vspace{0.2in}
 $\left\{\begin{matrix}1\leq w\leq \frac{n}{2} \\ \forall d\in\left \{ 1+w , ... , n-w \right \}\end{matrix}\right. V_{d}=\sum_{i=d-w}^{d}\sum_{j=d}^{d+w}M_{i,j}$
 \vspace{0.2in}
 
-\noindent The sums from the diamond are then used to compute boundaries. For all TADs, boundaries are extended inwards from the borders as long as the value of $V$ does not exceed an arbitrary threshold defined as the starting value (at the border) plus 10\% of the maximum value in the TAD (Figure \ref{interact_hic}B).The boundaries were filtered afterwards to remove all those extending beyond their TAD. This happened in cases where the border was already among the highest values in the vector $V$. This shows the algorithm is not optimal and would need be improved to properly process the boundaries in these special cases. 
+\noindent The sums from the diamond are then used to compute boundaries. For all TADs, boundaries are extended inwards from the borders as long as the value of $V$ does not exceed an arbitrary threshold defined as the starting value (at the border) plus 10\% of the maximum value in the TAD (Figure \ref{interact_hic}B).The boundaries were filtered afterwards to remove all those extending beyond their TAD. This happened in cases where the border was already among the highest values in the vector $V$. This shows the algorithm is not optimal and would need be improved to properly process the boundaries in these special cases. Lowering the threshold would reduce the number of boundaries that fail to stop inside their TAD, but it would also reduce the length of all boundaries. To accurately define boundaries, one would need a more complex algorithm that takes additional factors into account.
 
 \subsection*{intra-TAD contacts}
 
-For each gene overlapping a TAD, the mean contact inside the respective TAD was used as a measure. For single genes that overlap several TADs, the contacts are computed for each TAD independently. The mean contact in a TAD is computed by taking the arithmetic mean of all values in a square submatrix spanning from the beginning to the end of the TAD in the intrachromosomal matrix (Figure \ref{interact_hic}B).
+For each gene overlapping a TAD, the mean contact inside the respective TAD was used as a measure. For single genes that overlap several TADs, the contacts are computed for each TAD independently. The mean contact in a TAD is computed by taking the arithmetic mean of all values in a square submatrix spanning from the beginning to the end of the TAD in the intrachromosomal contact matrix (Figure \ref{interact_hic}B).
 
 \section*{Acknowledgements}
 I wish to thank Jennifer Yihong Tan for her precious advices and help throughout the project and writing of the report. I also wish to thank Ana Claudia Marques for her suggestions, general guidance and corrections in the report. Finally, I want to thank Adam Alexander Thil Smith for  his help with technical issues and code optimization and Maria Ferreira da Silva for her suggestions and critical reading of the report.
-Computationally demanding analysis were performed at the Vital-IT Center for High Performance Computing of the Swiss Institute of Bioinformatics (www.vital-it.ch).
+Computationally demanding analyses were performed at the Vital-IT Center for High Performance Computing of the Swiss Institute of Bioinformatics (www.vital-it.ch).
 
 %\bibliography{First_step}{}
 \bibliographystyle{apalike}
