applying last round of corrections

--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -60,20 +60,20 @@
 
 \section*{Abstract}
 
-A large proportion of the human genome generates RNA that is not translated into proteins, denoted as noncoding RNA. Long noncoding RNAs (lncRNAs), are longer than 200 nucleotides and represent the largest part of the noncoding transcriptome in humans, outnumbering protein-coding genes by almost 3 times. Although less than 1\% of these transcripts have been functionally annotated, a wide array of regulatory functions have already been attributed to lncRNAs. In particular, it has recently been found that intergenic lncRNAs (lincRNAs) associated with human trait variants often arise from enhancer transcription and coindide with regions of high frequencies of chromosomal contacts. There are already some characterized enhancer-associated lincRNAs (elincRNAs) known to regulate these chromosomal contacts, but whether this is a general function of elincRNAs or these are just isolated cases is unknown. Modulation of chromosomal architecture, for example by establishing loops or highly compact regions called topologically associated domains (TADs), is crucial for regulation of gene expression, allowing correct interactions between enhancers and promoters. Here, I investigate the role of these elincRNAs in spatial organization of the genome in a human lymphoblastoid cell line, making use of functional genomics and data from recent advances in chromosome conformation capture techniques that allow to quantify DNA:DNA contacts genome wide (Hi-C).
+A large proportion of the human genome generates RNA products that are not translated into proteins. Intergenic long noncoding RNAs (lincRNAs), are such noncodiing RNAs that are longer than 200 nucleotides found within the intergenic space of the genome and they represent the largest part of the noncoding transcriptome in humans. Although only less than 1\% of these transcripts have been functionally annotated, they comprise a wide array of regulatory functions. In particular, instances of lincRNAs that originate from enhancer activities (elincRNAs) have been associated with regions of frequent chromosomal contacts, called topologically associating domains (TADs), which ultimately shape the transcriptome landscape of the genome. However, the genome-wide prevalence and impact of elincRNAs on the regulation of chromosomal architecture remain unknown. Here, using data from other functional genomics studies in human lymphoblastoid cells, I investigated the global role of elincRNAs in the spatial organization of the genome. Specifically, I found elincRNAs to co-localize with chromosomal loop anchors and binding sites of proteins known to promote chromosomal contacts, suggesting their likely biological relevance in modulating nuclear conformation.
 
 \section*{Introduction}
-It was only discovered in the past decade that a surprisingly large proportion of the mammalian transcriptome does not code for proteins. To date, the number of annotated noncoding genes longer than 200 nucleotides (long noncoding RNA, lncRNA) exceeds that of protein-coding genes by at least 3 times \cite{Iyer2015}⁠. Among lncRNAs, those that do not overlap protein-coding genes, referred to as long intergenic noncoding RNAs (lincRNAs), are the most abundant. Functional and evolutionary analyses, together with extensive characterization of a handful of lincRNAs, have demonstrated that some of these transcripts are involved in the regulation of gene expression programs, both transcriptionally and post-transcriptionally, and that they can contribute to organismal traits and diseases \cite{Kornienko2013}⁠. However, the mechanisms and functions, if any, for the majority of lincRNAs remain unknown \cite{Rinn2012}⁠.  
+It was only discovered in the past decade that a surprisingly large proportion of the mammalian transcriptome does not code for proteins. To date, the number of annotated noncoding genes longer than 200 nucleotides (long noncoding RNA, lncRNA) exceeds that of protein-coding genes by at least 3 times \cite{Iyer2015}⁠. Amongst all lncRNAs, those that do not overlap protein-coding genes, referred to as long intergenic noncoding RNAs (lincRNAs), are the most abundant. Functional and evolutionary analyses, together with extensive characterization of a handful of lincRNAs, have demonstrated that some of these transcripts are involved in the regulation of gene expression programs, both transcriptionally and post-transcriptionally, and that they can contribute to organismal traits and diseases \cite{Kornienko2013}⁠. However, the mechanisms and functions, if any, for the majority of lincRNAs remain unknown \cite{Rinn2012}⁠.  
 
-A large proportion of lincRNAs originate from active enhancers, which are widely transcribed and generate noncoding products, broadly classified as enhancer-associated noncoding RNAs (eRNAs). These noncoding transcripts include lincRNAs which are referred to as enhancer-associated lincRNAs (elincRNAs) \cite{Guil2012}. 
+A large proportion of lincRNAs originate from active enhancers. These enhancers are widely transcribed and generate noncoding products, broadly classified as enhancer-associated noncoding RNAs (eRNAs). eRNAs can be bidirectional non-poly-adenylated or unidirectional poly-adenylated. The latter include lincRNAs, which are referred to as enhancer-associated lincRNAs (elincRNAs) \cite{Guil2012}. 
 
-Recently, a set of such lincRNAs, identified in human lymphoblastoid cell lines (LCLs), were associated with human trait variants have been shown to have enhancer-associated roles in \textit{cis}-regulation of local gene expression. Importantly, higher frequencies of chromosomal interactions are often observed at these loci relative to other lincRNAs in a human lymphoblastoid cell line (LCL), suggesting that elincRNAs may be involved in gene regulation through modulating chromatin architecture (Tan et al, 2016, under revision).
+Recently, a set of such enhancer-derived lincRNAs that were associated with human trait variants, were shown to regulate local gene expression in \textit{cis} in human lymphoblastoid cell lines (LCLs). Importantly, higher frequencies of chromosomal interactions are often observed at these loci relative to other lincRNAs, suggesting that elincRNAs may be involved in gene regulation through modulating chromatin architecture (Tan et al, 2016, under revision).
 
-Spatial organization of the genome impacts gene regulation \cite{Engreitz2016}⁠⁠. Specifically, the folding of genomic DNA into variably compact chromosomal structures can strongly influence expression of the embedded genes \cite{Gorkin2014}⁠⁠. Globally, regions with low degree of compaction, referred to as euchromatin, are associated with high levels of active transcription. On the other hand, relatively uncondensed and less transcriptionally active regions are called heterochromatin \cite{Passarge1979}\cite{Tamaru2010}⁠. Chromosomes are further compartmentalized into smaller domains, called topologically associating domains (TADs), where frequent DNA:DNA interactions occur as a result of their close spatial proximity. These domains are key in modulating gene transcriptional programs. Recent findings show that regions near TAD borders, called TAD boundaries, are essential for modulating gene regulatory interactions within TADs and preventing chromatin contacts across TADs. Deletion of TAD boundaries can disrupt those interactions, resulting in gene misexpression and disease phenotypes \cite{Lupianez2015}⁠.
+Gene regulation is shaped by spatial organization of the genome \cite{Engreitz2016}⁠⁠. Specifically, the folding of genomic DNA into variably compact chromosomal structures can strongly influence expression of the embedded genes \cite{Gorkin2014}⁠⁠. Globally, regions with low degree of compaction, referred to as euchromatin, are associated with high levels of active transcription. On the other hand, relatively uncondensed and less transcriptionally active regions are called heterochromatin \cite{Passarge1979}\cite{Tamaru2010}⁠. Chromosomes are further compartmentalized into smaller domains, called topologically associating domains (TADs), where frequent DNA:DNA interactions occur as a result of their close spatial proximity. These domains are key in modulating gene transcriptional programs. Recent findings show that regions near TAD borders, called TAD boundaries, are essential for modulating gene regulatory interactions within TADs and preventing chromatin contacts across TADs. Deletion of TAD boundaries can disrupt those interactions, resulting in gene misexpression and disease phenotypes \cite{Lupianez2015}⁠.
 
-Detailed functional characterizations of a few elincRNAs have established the molecular mechanisms underlying their roles in the spatial organization of the genome. For example, Haunt is one such elincRNA \cite{Yin2015}⁠⁠, which regulates the expression of the HOXA gene cluster by modulating intrachromosomal interactions, specifically through establishing promoter-enhancer looping. These recent findings raise the question on what is the prevalence of elincRNAs contributing to gene regulation through modulation of chromosomal conformation.
+Detailed functional characterizations of a few elincRNAs have established the molecular mechanisms underlying their roles in the spatial organization of the genome. For example, Haunt is one such elincRNA \cite{Yin2015}⁠⁠, which regulates the expression of the HOXA gene cluster by modulating intrachromosomal interactions, specifically through establishing promoter-enhancer looping. These recent findings raise the question on what is the prevalence of elincRNAs contributing to gene regulation through modulating chromosomal conformation.
 
-Using various bioinformatics tools to analyze publicly available multi-omics data from human lymphoblastoid cell lines (LCLs). I investigated the molecular properties of elincRNAs. Specifically, I examined their enrichment in regions that are key in TAD regulation and their association with the amount of chromosomal interactions to gain initial insight into their roles in gene regulation within topological domains. My analyses show that elincRNAs are associated with high density of DNA:DNA contacts within TADs and are significantly enriched in protein binding sites important for TAD regulation. Importantly, elincRNAs are strongly enriched at chromosomal loop anchors where promoter-enhancer interactions occur. Together, my findings support the hypothesis that they may contribute to gene regulation by establishing contacts between gene regulatory elements and modulating chromosomal organization.
+Using publicly available multi-omics data from human LCLs. I investigated the functional role and prevalence of elincRNAs in nuclear organization. Specifically, I examined their enrichment in regions that are key in TAD regulation and their association with the amount of chromosomal interactions to gain initial insight into their roles in gene regulation within topological domains. My analyses show that elincRNAs are associated with high density of DNA:DNA contacts within TADs and are significantly enriched in protein binding sites important for TAD regulation. Importantly, elincRNAs are strongly enriched at chromosomal loop anchors where promoter-enhancer interactions occur. Together, my findings support the hypothesis that they may contribute to gene regulation by establishing contacts between gene regulatory elements and modulating chromosomal organization.
 
 \section*{Results}
 
